# flex-sensor-agent-mcp

./: .gitignore  GITHUB_DEPLOYMENT.md  README.md  README_FLEX_SENSOR_AGENT_MCP.md  opencode.json  pyproject.toml
client_script/: create_micromixer_fixed.py
scripts/: build_knowledge_base.py
src/: __init__.py  http_server.py  server.py  stdio_proxy.py
src/async_handler/: __init__.py  solver.py
src/knowledge/: __init__.py  embedded.py  pdf_processor.py  retriever.py
src/knowledge/prompts/: mph_api.md  physics_guide.md  workflow.md
src/resources/: __init__.py  model_resources.py
src/tools/: __init__.py  flexible_sensor.py  geometry.py  mesh.py  model.py  parameters.py  physics.py  results.py  session.py  study.py
src/utils/: __init__.py  versioning.py
tests/: test_basic.py
